@@ -52,7 +52,7 @@ object Settings extends Build {
   val osmxBean = ManagementFactory.getOperatingSystemMXBean.asInstanceOf[OperatingSystemMXBean]
   val sysMemoryInMB = osmxBean.getTotalPhysicalMemorySize >> 20
   val singleRunRequiredMem = 3 * 1024 + 512
-  val parallelTasks = if (isTravis) 1 else Math.max(1, ((sysMemoryInMB - 1550) / singleRunRequiredMem).toInt)
+  val parallelTasks = if (isTravis) 2 else Math.max(1, ((sysMemoryInMB - 1550) / singleRunRequiredMem).toInt)
 
   // Due to lack of entrophy on virtual machines we want to use /dev/urandom instead of /dev/random
   val useURandom = Files.exists(Paths.get("/dev/urandom"))
@@ -67,7 +67,6 @@ object Settings extends Build {
   val cassandraTestVersion = sys.props.get("test.cassandra.version").getOrElse(Versions.Cassandra)
 
   lazy val TEST_JAVA_OPTS = Seq(
-    "-XX:MaxPermSize=256M",
     "-Xms256m",
     "-Xmx512m",
     "-Dsun.io.serialization.extendedDebugInfo=true",
